# learning-buddy

./: .gitignore  NAMESPACE.md  README.en.md  README.md
cpp-primer-5th-edition/cpp-primer-5th-edition/10.generic_algorithms/10.3.sort_merge_algorithms/: CMakeLists.txt  README.md  SPLIT_EXERCISES_NOTICE.md  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/10.generic_algorithms/10.3a.basic_sorting_algorithms/: CMakeLists.txt  README.md  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/10.generic_algorithms/10.3b.advanced_sorting_algorithms/: CMakeLists.txt  README.md  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/10.generic_algorithms/10.3c.merge_algorithms/: CMakeLists.txt  README.md  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/11.associative_containers/11.1.set_basics/: CMakeLists.txt  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/11.associative_containers/11.2.map_basics/: CMakeLists.txt  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/11.associative_containers/11.3.pair_basics/: CMakeLists.txt  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/11.associative_containers/11.5.multiset_basics/: CMakeLists.txt  README.md  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/13.copy_control/13.1.destructor_basics/: CMakeLists.txt  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/13.copy_control/13.2.copy_constructor_basics/: CMakeLists.txt  README.md  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/14.overloaded_operations/14.1.arithmetic_operators/: CMakeLists.txt  README.md  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/14.overloaded_operations/14.2.comparison_operators/: CMakeLists.txt  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/16.templates_generic_programming/16.1.function_templates/: CMakeLists.txt  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/16.templates_generic_programming/16.2.class_templates/: CMakeLists.txt  README.md  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/17.specialized_library_facilities/17.1.bitset_operations/: CMakeLists.txt  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp-primer-5th-edition/17.specialized_library_facilities/17.2.random_numbers/: CMakeLists.txt  README.md  build.bat  build.sh  run_tests.bat  run_tests.sh
cpp-primer-5th-edition/cpp_template/: CMakeLists.txt  README.md  USAGE_GUIDE.md
cpp-primer-5th-edition/cpp_template/include/: exercise_name_exercises.h  exercise_name_solutions.h  function_exercises.h
cpp-primer-5th-edition/cpp_template/src/: exercise_name_exercises.cpp  exercise_name_solutions.cpp  function_exercises.cpp  function_solutions.cpp
cpp-primer-5th-edition/cpp_template/test/: test_exercise_name_basics.cpp  test_exercise_name_practice.cpp  test_function_basics.cpp
cpp-primer-buddy/course-content-provider/: CHANGES.md  README.md  config.yaml  course_content.db  pyproject.toml  run_tests.py
cpp-primer-buddy/course-content-provider/tests/: conftest.py  test_app.py
python-3rd-edition/: .gitignore  .vscodeignore  ALL_SPECIFICATIONS_COMPLETED.md  CHANGELOG.md  DOCKER_ENVIRONMENT_IMPLEMENTATION.md  DOCKER_REQUIREMENT_IMPLEMENTATION_SUMMARY.md  EXERCISE_STRUCTURE.md  FEATURE_SPECIFICATIONS_SUMMARY.md  LICENSE  PYTHON_TEACHING_PHILOSOPHY.md  README.md  SPECIFICATION_REQUIREMENTS.md  SPECIFICATION_REQUIREMENTS_IMPLEMENTATION.md  STANDALONE_DOCKER_IMPLEMENTATION.md  STANDALONE_DOCKER_REPOSITORY_PLAN.md  TEMPLATE_GUIDE.md  TEMPLATE_IMPLEMENTATION_SUMMARY.md  TEMPLATE_UPDATE_PROCESS.md  UPDATE_GUIDE.md  build.bat  build.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json
python-3rd-edition/.specify/specs/: CHECKLIST.md  PLAN.md  README.md  spec.md
python-3rd-edition/1.1_variables_strings/: 1.1_variables_strings.ipynb  README.md  exercise.py  solution.py  test_exercise.py
python-3rd-edition/1.2_numbers_operations/: 1.2_numbers_operations.ipynb  README.md  exercise.py  solution.py  test_exercise.py
python-3rd-edition/1.3_strings_methods/: README.md  exercise.py  solution.py  test_exercise.py
python-3rd-edition/1.4_numbers_operations/: 1.4_numbers_operations.ipynb  README.md  exercise.py  solution.py  test_exercise.py
python-3rd-edition/1.5_comments_documentation/: 1.5_comments_documentation.ipynb  README.md  exercise.py  solution.py  test_exercise.py
python-3rd-edition/2.1_list_basics_indexing/: 2.1_list_basics_indexing.ipynb  README.md  exercise.py  solution.py  test_exercise.py
python-3rd-edition/2.2_modifying_lists/: 2.2_modifying_lists.ipynb  README.md  exercise.py  solution.py  test_exercise.py
python-3rd-edition/2.3_organizing_lists/: 2.3_organizing_lists.ipynb  README.md  exercise.py  run_tests.py  solution.py  test_exercise.py
python-3rd-edition/2.4_avoiding_index_errors/: 2.4_avoiding_index_errors.ipynb  README.md  exercise.py  solution.py  test_exercise.py
python-3rd-edition/3.1_looping_through_lists/: 3.1_looping_through_lists.ipynb  README.md  exercise.py  solution.py  test_exercise.py
python-3rd-edition/3.2_indentation_styling/: 3.2_indentation_styling.ipynb  README.md  exercise.py  solution.py  test_exercise.py
python-3rd-edition/6.2_introducing_while_loops/: 6.2_introducing_while_loops.ipynb  README.md  exercise.py  solution.py  test_exercise.py
python-3rd-edition/python_template/: README.md  exercise.py  exercise_name.ipynb  solution.py  test_exercise.py
python-3rd-edition/src/: extension.ts  treeViewProvider.ts
(+1618 files in other folders)
